--- a/idealize-impressoes/index.html
+++ b/idealize-impressoes/index.html
@@ -23,11 +23,11 @@
       <img src="img/idealize-logo.svg" alt="Logo Idealize" />
 
       <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">sobre</a>
-        <a href="#">serviços</a>
-        <a href="#">projetos</a>
-        <a href="#">contato</a>
+        <a href="#home">home</a>
+        <a href="#about">sobre</a>
+        <a href="#services">serviços</a>
+        <a href="#projects">projetos</a>
+        <a href="#contact">contato</a>
       </nav>
 
       <div class="icons">
@@ -61,10 +61,18 @@
       </div>
 
       <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
-        <a href="#" class="fab fa-linkedin"></a>
+        <a
+          href="https://www.facebook.com/Idealize.jah"
+          target="_blank"
+          class="fab fa-facebook-f"
+        ></a>
+        <a href="#" target="_blank" class="fab fa-twitter"></a>
+        <a
+          href="https://www.instagram.com/idealize_impressoes/"
+          target="_blank"
+          class="fab fa-instagram"
+        ></a>
+        <a href="#" target="_blank" class="fab fa-linkedin"></a>
       </div>
     </div>
 
@@ -349,7 +357,7 @@
             cols="30"
             rows="10"
           ></textarea>
-          <input type="submit" value="send message" class="btn" />
+          <input type="submit" value="enviar" class="btn" />
         </form>
       </div>
     </section>
